Bug 1018598 - Shutdown jump list thread correctly to avoid debug assertions. r=jimm